--- a/chart1/templates/serviceaccount.yaml
+++ b/chart1/templates/serviceaccount.yaml
@@ -7,6 +7,7 @@ metadata:
     {{- include "chart1.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
+    eks.amazonaws.com/role-arn: arn:aws:iam::663880399834:role/s3-full-access-role
     {{- toYaml . | nindent 4 }}
   {{- end }}
 automountServiceAccountToken: {{ .Values.serviceAccount.automount }}
